test_suite/tests/ui/pass/arg_array_type.rs
use clapi::macros::*;

#[command]
#[arg(array)]
fn test(array: [u32; 10]){}

fn main(){}